--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,9 @@
     "target": "es5",
     "module": "esnext",
     "baseUrl": "./",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
     "moduleResolution": "node",
     "paths": {
       "@/*": [
