--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@yeger/vue-masonry-wall": "^5.0.2",
     "ant-design-vue": "^3.2.2",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
+    "masonry-layout": "^4.2.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.3.0-beta.24",
