--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
     "masonry-layout": "^4.2.2",
+    "swiper": "^11.0.5",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.3.0-beta.24",
