--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^10.6.1",
-    "ant-design-vue": "^3.2.2",
+    "ant-design-vue": "4.0.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
